--- a/mockups/register.html
+++ b/mockups/register.html
@@ -21,7 +21,7 @@
         <ul id="menu">
           <li><a href="/index.html">Home</a></li>
           <li><a href="/login.html">Login</a></li>
-          <li><a href="/register.html">Register</a></li>
+          <li><a href="">Register</a></li>
         </ul>
       </div>
       <h1>Stock Portfolio</h1>
@@ -29,20 +29,12 @@
   </header>
   <main>
     <h3>A stock portfolio app for Code 401 Python</h3>
-    <table class="portfolioTable">
-  <tr>
-    <th>Stock</th>
-    <th>Price/share</th>
-  </tr>
-  <tr>
-    <td>TEST</td>
-    <td>$3.19</td>
-  </tr>
-  <tr>
-    <td>AMD</td>
-    <td>$9.55</td>
-  </tr>
-</table>
+    <form class="registration">
+      <input class="username" type="text" placeholder="Username" required>
+      <input class="password" type="text" placeholder="Password" required>
+      <input class="confirmPassword" type="text" placeholder="Confirm Password" required>
+      <button type="submit">Register</button>
+    </form>
   </main>
 </body>
 </html>
